// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`myTest.each2 hello 1`] = `
{
  "args": [
    "hello",
  ],
  "myFixture": 1234,
}
`;

exports[`myTest.each2 hi 1`] = `
{
  "args": [
    "hi",
  ],
  "myFixture": 1234,
}
`;

exports[`myTest.each3 hello 1`] = `
{
  "args": [
    "hello",
  ],
  "myFixture": 1234,
}
`;

exports[`myTest.each3 hi 1`] = `
{
  "args": [
    "hi",
  ],
  "myFixture": 1234,
}
`;

exports[`myTest.each4 hello 1`] = `
{
  "arg": "hello",
  "myFixture": 1234,
}
`;

exports[`myTest.each4 hi 1`] = `
{
  "arg": "hi",
  "myFixture": 1234,
}
`;

exports[`myTest.each5-context-true hello 1`] = `
{
  "arg": "hello",
  "myFixture": 1234,
}
`;

exports[`myTest.each5-context-true hello 2`] = `
{
  "arg": "hello",
  "myFixture": 1234,
}
`;

exports[`myTest.each5-context-true hi 1`] = `
{
  "arg": "hi",
  "myFixture": 1234,
}
`;

exports[`myTest.each5-context-true hi 2`] = `
{
  "arg": "hi",
  "myFixture": 1234,
}
`;

exports[`myTest.each5-context-true-multiple hello 2 1`] = `
{
  "argNumber": 2,
  "argString": "hello",
  "myFixture": 1234,
}
`;

exports[`myTest.each5-context-true-multiple hi 3 1`] = `
{
  "argNumber": 3,
  "argString": "hi",
  "myFixture": 1234,
}
`;

exports[`test.each2 hello 1`] = `
[
  "hello",
]
`;

exports[`test.each2 hi 1`] = `
[
  "hi",
]
`;

exports[`test.each3 hello 1`] = `
[
  "hello",
]
`;

exports[`test.each3 hi 1`] = `
[
  "hi",
]
`;

exports[`test.each4 hello 1`] = `"hello"`;

exports[`test.each4 hi 1`] = `"hi"`;

exports[`test.each5-context-true hello 1`] = `"hello"`;

exports[`test.each5-context-true hi 1`] = `"hi"`;
